Trying to fix header not wrapping.

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -40,6 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.1;
 	margin-bottom: .8em;
     font-family: 'Yanone Kaffeesatz', arial, serif;
+    white-space: normal;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
